[package]
name = "isl_bindings_generator"
authors = ["Kaushik Kulkarni <kaushikcfd@gmail.com>"]
description = "Rust bindings generator for Integer Set Library"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
codegen = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
hashbrown = "0.12.3"
lazy_static = "1.4.0"
serde_json = "1.0.140"
tempfile = "3.20.0"
serde_derive = "1.0.219"
clang-ast = "0.1.31"
